--- a/skript/algorithm.tex
+++ b/skript/algorithm.tex
@@ -244,7 +244,7 @@ die aus partiellen Differentialgleichungen abgeleitet wurden.
 Unser Hauptaugenmerk in diesem Kapitel m"ussen also Methoden sein,
 die f"ur d"unn besetzte Matrizen oder f"ur Bandmatrizen gut funktionieren.
 
-\subsection{Jacobi-Algorithmus}
+\subsection{Jacobi-Algorithmus\label{section-jacobi}}
 \index{Algorithmus!Jacobi}
 Wir illustrieren den Jacobi-Algorithmus an folgendem Beispielproblem:
 \begin{equation}
