--- a/skript/potential/potential.tex
+++ b/skript/potential/potential.tex
@@ -207,7 +207,7 @@ wie geschaffen f"ur das Potentialproblem.
 \begin{figure}[h] 
 \centering 
 \includegraphics[width=0.6\hsize]{heat/heat-3.pdf}
-\caption{"Ubergabe der Randwerte an den Teilgebietsgrenzen, gleiche Abbildung wie in \ref{potential:domainpartition}}
+\caption{"Ubergabe der Randwerte an den Teilgebietsgrenzen, gleiche Abbildung wie in \ref{heat:domainpartition}}
 \end{figure}
 
 Zur Parallelisierung und Verteilung kann die L"osungsmatrix
