make rhead/lhead consistent

--- a/skript/algorithm.tex
+++ b/skript/algorithm.tex
@@ -2287,6 +2287,7 @@ Eine solche Formulierung ist tats"achlich m"oglich,
 Details dazu in \cite[Chapter 8.6]{skript:watkins}.
 
 \section{"Ubungsaufgaben}
+\rhead{"Ubungsaufgaben}
 \begin{uebungsaufgaben}
 \item
 \input 1.tex
