--- a/skript/anwendungen.tex
+++ b/skript/anwendungen.tex
@@ -1,4 +1,6 @@
 \chapter*{"Ubersicht}
+\lhead{"Ubersicht}
+\rhead{}
 \begin{refsection}
 Im zweiten Teil werden Anwendungsbeispiele aus der HPC-Welt gezeigt.
 Eigentliche rechnerische L"osungen stehen hier neben mathematischen
