--- a/skript/apfel/apfelmaennchenInput.tex
+++ b/skript/apfel/apfelmaennchenInput.tex
@@ -1,5 +1,5 @@
 \chapter{Quaternionisches Apfelm"annchen}
-\rhead{Quaternionisches Apfelm"annchen}
+\lhead{Quaternionisches Apfelm"annchen}
 \begin{refsection}
 \chapterauthor{Tabea M\'endez, Christian Schmid}
 \lstdefinestyle{Matlab}{
@@ -32,6 +32,7 @@
 }
 
 \section{Mandelbrot-Menge}
+\rhead{Mandelbrot-Menge}
 
 \subsection{Einf"uhrung}
 Die Mandelbrot-Menge (Abbildung \ref{fig. appleman}), auch bekannt als
@@ -160,6 +161,7 @@ und geeigneten Programmiersprachen (Parallelisierung des Problems)
 unumg"anglich.
 
 \section{Quaternionische Mandelbrot-Menge}
+\rhead{Quaternionische Mandelbrot-Menge}
 In einem zweiten Schritt soll nun die Mandelbrot-Menge von zwei
 auf vier Dimensionen, sprich von den komplexen Zahlen auf die
 Quaternionen erweitert werden. Dazu wird die Funktion $f_c(z)$ (Formel
