--- a/skript/crypto/crypto.tex
+++ b/skript/crypto/crypto.tex
@@ -1,11 +1,12 @@
 \chapter{Knacken von MD5 mit OpenCL}
-\rhead{Knacken von MD5 mit OpenCL}
+\lhead{Knacken von MD5 mit OpenCL}
 \begin{refsection}
 
 \chapterauthor{Danilo Bargen, Lukas Murer}
 
 
 \section{Einleitung}
+\rhead{Einleitung}
 
 \subsection{Hashfunktionen}
 \index{Hashfunktion}
@@ -226,6 +227,7 @@ keinerlei Interprozess-Kommunikation. OpenCL ist hierf"ur also bestens geeignet.
 
 
 \section{L"osungsansatz}
+\rhead{L"osungsansatz}
 \label{crypto:loesungsansatz}
 
 Um den Brute-Force-Knacker zu implementieren haben wir uns f"ur folgenden
@@ -364,6 +366,7 @@ Kapitel.
 
 
 \section{Probleme mit grossen Problemen}
+\rhead{Probleme mit grossen Problemen}
 \label{crypto:grosse_probleme}
 
 \subsection{Einf"uhrung}
@@ -808,6 +811,7 @@ Zusammengefasst gilt f"ur den parametrisierten Start von OpenCL Kernels:
 
 
 \section{Implementationsdetails des MD5 Crackers}
+\rhead{Implementationsdetails des MD5 Crackers}
 
 \subsection{Berechnung des MD5-Hashes}
 \label{crypto:md5lib}
@@ -1028,6 +1032,7 @@ ist, sieht man eindr"ucklich im
 
 
 \section{Resultate}
+\rhead{Resultate}
 
 Unsere Implementation kann das gesetzte Ziel aus Abschnitt
 \ref{crypto:zielsetzung} -- das Knacken des Wortes ``monkey'' innerhalb
