--- a/skript/green/green.tex
+++ b/skript/green/green.tex
@@ -1,10 +1,10 @@
 \chapter{Visualisierung der Greenschen Funktion\label{chapter:green}}
-\rhead{Visualisierung der Greenschen Funktion}
+\lhead{Visualisierung der Greenschen Funktion}
 \begin{refsection}
 \chapterauthor{Andreas Linggi, Stefan Steiner}
 
 \section{Aufgabenstellung}
-
+\rhead{Aufgabenstellung}
 Um ein Problem der Mathematik besser zu verstehen, ist es oft sehr
 hilfreich, wenn es verst"andlich beschrieben ist. Eine Visualisierung
 in Form eines Bildes oder kurzen Films ist dabei eine M"oglichkeit,
@@ -27,6 +27,7 @@ anliegt, ist es von Interesse zu wissen, welches Potential man nun
 an einem beliebigen Punkt auf der Platte misst.
 
 \section{George Green}
+\rhead{George Green}
 \index{Green, George}
 Der Namensgeber f"ur die Greensche Funktion ist George Green. Er
 war ein britischer Physiker und Mathematiker. Geboren wurde er 1793
@@ -72,6 +73,7 @@ t"atig.
 \end{figure} 
 	
 \section{Algorithmus}
+\rhead{Algorithmus}
 Um eine Visualisierung "uberhaupt durchf"uhren zu k"onnen, braucht
 es in unserem Fall Daten, mit denen wir arbeiten k"onnen. Diese
 liefert uns ein Programm, bei welchem wir Daten einspeisen und im
@@ -226,7 +228,7 @@ Bild erstellt werden. Optional dienen diese als Vorlage f"ur einen
 kurzen Film.
 
 \section{Visualisierung}
-	
+\rhead{Visualisierung}
 \subsection{Prinzip}
 			
 Ziel der Visualisierung ist, die einzelnen Schritte einer Berechnung
@@ -330,6 +332,7 @@ wird am Schluss optional noch ein Video erstellt.
 \index{Video}
 		
 \section{Probleme}
+\rhead{Probleme}
 
 \subsection{Konvergenz}
 	
@@ -415,7 +418,7 @@ vorhanden sind, wirkt die Visualisierung nicht "uberladen und ist
 "ubersichtlich.
 		
 \section{Resultate}
-
+\rhead{Resultate}
 Wir haben mehrere Platten mit unterschiedlichen Potentialverteilungen
 und mit unterschiedlicher Anzahl Diskretisierungspunkten berechnet.
 Je nach Ausgangsbild, welches unsere Potentialverteilung darstellt,
