--- a/skript/julia/julia.tex
+++ b/skript/julia/julia.tex
@@ -1,9 +1,10 @@
 \chapter{Julia-Mengen\label{chapter:julia}}
-\rhead{Julia-Mengen}
+\lhead{Julia-Mengen}
 \begin{refsection}
 
 \chapterauthor{Andreas M"uller}
 \section{Dynamische Systeme und Iteration}
+\rhead{Dynamische Systeme und Iteration}
 \index{dynamisches System}
 In der Analyis lernt man "uber 
 gew"ohnliche Differentialgleichung, dass L"osungen f"ur eine gewisse
@@ -104,6 +105,7 @@ Funktion $f_c(z)$ mit Startwert $0$ beschr"ankt bleiben, heisst die
 Mandelbrot-Menge, auch als ``Apfelm"annchen'' bekannt.
 
 \section{Was sind Julia-Mengen?}
+\rhead{Was sind Julia-Mengen?}
 \index{Julia-Menge}
 F"ur jede komplexe Zahl $c\in\mathbb C$ kann man die Iterationen der
 Funktion
@@ -206,6 +208,7 @@ man spricht auch von ``Cantor-Staub'',
 in \ref{julia:h} besteht sie aus einem fraktalen Baum.
 
 \section{Berechnung von Julia-Mengen}
+\rhead{Berechnung von Julia-Mengen}
 Es gibt zwei M"oglichkeiten, eine Julia-Menge sichtbar zu machen.
 In den F"allen, wo ein Fixpunkt $\hat z$ existiert, kann man f"ur jeden
 Punkt der komplexen Ebene die Iterationsfolge $z_n$ berechnen, und
@@ -344,6 +347,8 @@ Kernels deutlich kleiner als das Maximum.
 Zufallszahlen notwendig, erzeugung mit Hilfe des Park-Miller
 Zufallszahl-Generators, initialisiert mit der Work-ID.
 \end{itemize}
+
+\rhead{Beispiele}
 
 \begin{figure}
 \begin{center}
