--- a/skript/kugel/Kugelsternhaufen.tex
+++ b/skript/kugel/Kugelsternhaufen.tex
@@ -32,12 +32,12 @@
   }}{}
 
 \chapter{Kugelsternhaufen}
-\rhead{Kugelsternahufen}
+\lhead{Kugelsternahufen}
 \begin{refsection}
 \chapterauthor{Flavio La Morea, Nicol\'as Rom\'an L"uthold}
 
 \section{Grundlagen}
-\lhead{Grundlagen}
+\rhead{Grundlagen}
 
 \subsection{Einf"uhrung}
 \begin{minipage}{.65\textwidth}
@@ -211,7 +211,7 @@ fliegen die simulierten Sterne einfach aneinander vorbei, wie wenn es
 "uberhaupt keine Schwerkraft g"abe.
      
 \section{Implementation}
-\lhead{Implementation}
+\rhead{Implementation}
 F"ur die Simulation wurde ein C++ Programm erstellt. Es kann
 bei Interesse unter diesem GitHub Repository bezogen werden:
 \url{https://github.com/nromanlu/Kugelsternhaufen}.
@@ -457,7 +457,7 @@ Nachhinein w"are es besser gewesen f"ur die lange Simulation nur jeden
 Schritte die Positionen und Radien abspeichern.
 
 \section{Fazit}
-\lhead{Fazit}
+\rhead{Fazit}
 Alles in allem gelang es uns nicht einen stabilen Kugelsternhaufen
 zu simulieren. Die Sterne fliegen zum Teil ineinander hindurch ohne
 aufeinander einzuwirken. Das hat mit einem viel zu gross gew"ahltem
