--- a/skript/mapreduce/mapreduce.tex
+++ b/skript/mapreduce/mapreduce.tex
@@ -1,9 +1,10 @@
 \chapter{MapReduce}
-\rhead{MapReduce}
+\lhead{MapReduce}
 \begin{refsection}
 \chapterauthor{Daniel Monti, Pascal Stump}
 
 \section{MapReduce}
+\rhead{MapReduce}
 \index{MapReduce}
 MapReduce ist ein Programmiermodell, mit dessen Hilfe man sehr grosse
 Datenmenge verarbeiten kann.  Die M"oglichkeiten reichen bis zu
@@ -173,6 +174,7 @@ werden muss, sondern nur einmal f"ur alle Reduce Prozesse.
 
 
 \section{Eigenwertberechnung}
+\rhead{Eigenwertberechnung}
 \index{Eigenwerte}
 MapReduce eignet sich nicht direkt f"ur die Programmierung numerischer
 Algorithmen, da es f"ur die Verarbeitung unstrukturierter Daten
