--- a/skript/maschinen.tex
+++ b/skript/maschinen.tex
@@ -1,4 +1,6 @@
 \chapter{Hardware\label{chapter-hardware}}
+\lhead{Hardware}
+\rhead{}
 High Performance Computing ist m"oglich dank massiver Parallelisierung.
 Dieses Kapitel beschreibt, wie HPC Hardware aussieht, und welche Konsequenzen
 sich f"ur die Programmierung ergeben.
@@ -17,6 +19,7 @@ Eine hervorragende Referenz dazu ist das Buch von Hager und Wellein
 \end{figure}
 
 \section{Standardhardware}
+\rhead{Standardhardware}
 Moderne Computer sind praktisch immer Multiprozessor- oder mindestens
 Multicore-System mit aufgeteiltem Hauptspeicher (Abbildung~\ref{numa}).
 Es besteht jedoch eine Diskrepanz zwischen der Sicht des Programmierers
@@ -159,6 +162,7 @@ Pipeline-Blasen oder Pipeline-Stalls kommen.
 \end{figure}
 
 \section{Konsequenzen f"ur das Programm-Design}
+\rhead{Konsequenzen f"ur das Programm-Design}
 Aus den Illusionen lassen sich ein paar Faustregeln ableiten, wie man
 Code formulieren kann, so dass er der Realit"at besser Rechnung tr"agt.
 
@@ -299,6 +303,7 @@ beschaffe einen besseren Computer.
 \end{itemize}
 
 \section{Beschleuniger\label{section-beschleuniger}}
+\rhead{Beschleuniger}
 Zus"atzlich zur CPU steht heute in vielen Systemen ausserdem Rechenleistung
 in Peripherie-Einheiten zur Verf"ugung.
 In den letzten Jahren wurde immer bedeutendere Floating-Point Kapazit"at 
