--- a/skript/openfoam/OpenFOAM.tex
+++ b/skript/openfoam/OpenFOAM.tex
@@ -1,9 +1,10 @@
 
 \chapter{OpenFOAM}
-\rhead{OpenFOAM}
+\lhead{OpenFOAM}
 \begin{refsection}
 \chapterauthor{Gregor Dengler}
 \section{Einleitung}
+\rhead{Einleitung}
 \index{OpenFOAM}
 OpenFOAM (Open Source Field Operation and Manipulation) ist ein in
 C++ geschriebenes, numerisches, freies Simulationssoftwarepaket. Es
@@ -44,7 +45,8 @@ Berechnung extrahiert werden.
 \caption{OpenFOAM im "Uberblick \cite{of} }
 \end{figure}
 
-\section{Einsatzgebiete von OpenFoam}
+\section{Einsatzgebiete von OpenFOAM}
+\rhead{Einsatzgebiete von OpenFOAM}
 Es gibt in OpenFOAM eine ganze Reihe verschiedener Standard Solver f"ur diverse Probleme. Hier eine kleine "Ubersicht, f"ur welche Bereiche es bereits Standard Solver gibt:
 \setlist{nolistsep}
 \begin{itemize}
@@ -78,6 +80,7 @@ zu erstellen. So l"asst sich OpenFOAM mit einem gewissen Aufwand auf
 jedes Problem zuschneiden. \cite{of}
 
 \section{Beispiel Cavity}
+\rhead{Beispiel Cavity}
 \subsection{Pre-Processing}
 \index{Cavity}
 \begin{figure}
@@ -314,6 +317,7 @@ Schlusszeitpunkt anschauen. Man kann auch den Verlauf der Str"omung in
 einer Art Video ansehen.
 
 \section{Beispiel Keil}
+\rhead{Beispiel Keil}
 \index{Keil}
 Das Beispiel Keil habe ich selber versucht mit Cavity als Grundlage zu
 erarbeiten. Im Grundsatz geht es um einen Keil, der in einem Windkanal
@@ -421,6 +425,7 @@ Abbruch der Simulation gef"uhrt hat.
 \end{figure}
 
 \section{Probleme}
+\rhead{Probleme}
 Ich hatte w"ahrend der Arbeit mit OpenFOAM mit Problemen zu k"ampfen. In
 diesem Abschnitt wird beschrieben, wo ich am meisten Zeit verloren habe
 und wie man sich diesen "Arger sparen kann.
@@ -473,6 +478,7 @@ Simulation sowieso abbrechen wollte um die Ergebnisse f"ur die Vorlesung
 Numb3rs @ HSR zu verwenden.
 
 \section{Fazit}
+\rhead{Fazit}
 Mein pers"onliches Fazit zur Arbeit mit OpenFOAM f"allt nicht
 besonders positiv aus, da es sehr aufw"andig ist, sich in OpenFOAM
 einzuarbeiten. Ich bin mir aber sicher, dass wenn man das Softwarepaket
