--- a/skript/radon/sections/Einleitung.tex
+++ b/skript/radon/sections/Einleitung.tex
@@ -1,5 +1,5 @@
 \section{Einleitung}
-
+\rhead{Einleitung}
 Die Radonr"uckprojektion oder auch Radonr"ucktransformation ist
 die Umkehrung der Radontransformation die 1917 vom "ostreichischen
 Mathematiker Johann Radon ver"offentlicht wurde. Eine der bekanntesten
