--- a/skript/radon/sections/Implementation.tex
+++ b/skript/radon/sections/Implementation.tex
@@ -1,5 +1,5 @@
 \section{Implementation}
-
+\rhead{Implementation}
 \subsection{Wahl des Dateiformates}
 
 Als Dateiformat w"ahlten wir FITS da diese Files auch als Bilder interpretiert werden k"onnen und auch \texttt{double}  Werte enthalten k"onnen. Der Punkt(0,0) befindet sich bei einem FITS File in der unteren linken Ecke. Dies ist wichtig im Bezug auf die richtige Darstellung, so dass die R"uckprojektion nicht gedreht und gespiegelt abgebildet wird. Bei den meisten anderen Dateiformaten befindet sich der Punkt(0,0) nicht in der unteren linken Ecke.
