--- a/skript/radon/sections/Loesungsansatz.tex
+++ b/skript/radon/sections/Loesungsansatz.tex
@@ -1,5 +1,5 @@
 \section{L"osungsansatz}
-
+\rhead{L"osungsansatz}
 \subsection{Diskretisation der R"uckprojektion}
 
 Um nun dieses Problem zu l"osen m"ussen wir zuerst die Formel f"ur die
