--- a/skript/radon/sections/Problemstellung.tex
+++ b/skript/radon/sections/Problemstellung.tex
@@ -1,5 +1,5 @@
 \section{Problemstellung}
-
+\rhead{Problemstellung}
 In der Aufgabenstellung zur Radonr"ucktransformation geht es darum, die
 R"ucktransformation zun"achst zu implementieren. Anschliessend werden
 die Rechenzeiten einer parallelelen Implementation, mit denjenigen
