--- a/skript/radon/sections/Resultate.tex
+++ b/skript/radon/sections/Resultate.tex
@@ -1,5 +1,5 @@
 \section{Resultate}
-
+\rhead{Resultate}
 Im Vergleich der sequentiellen- und der paralellen Implementation
 zeigt sich ein deutlicher Unterschied. F"ur die Tests verwendeten wir
 abwechslungsweise eine CPU und eine GPU und liessen jeweils ein $512\times
