--- a/skript/radon/sections/Rueckprojektion.tex
+++ b/skript/radon/sections/Rueckprojektion.tex
@@ -1,4 +1,5 @@
 \section{Radontransformation und R"uckprojektion}
+\rhead{Radontransformation und R"uckprojektion}
 \index{Radontransformation}
 \index{Radon!Transformation}
 Durch eine Funktion $f(x,y)$, welche die Absorbtion der R"ontgenstrahlen
