--- a/skript/sprachen.tex
+++ b/skript/sprachen.tex
@@ -225,6 +225,7 @@ Lineare Regression (rote Gerade) liefert den Exponenten $2.990$.
 \end{figure}
 
 \section{Problemkatalog}
+\rhead{Problemkatalog}
 Wir stellen hier die Funktionen zusammen, die von einer
 Parallelisierungstechnologie bereitgestellt werden m"ussen, um das Problem
 der Fallstudie zu l"osen.
@@ -1271,6 +1272,7 @@ keinen Laufzeitverbesserung mehr. Ebenso skaliert die L"osung f"ur
 Problem nicht mehr, wenn $n$ wesentlich gr"osser als ca.~3000 ist.
 
 \section{Gegen"uberstellung}
+\rhead{Gegen"uberstellung}
 Diese Fallbeispiele und insbesondere auch die Performance-Auswertungen
 geben einen ziemlich guten "Uberblick "uber die angemessenen Anwendungsgebiete
 der einzelnen Technologien.
