--- a/skript/vorwort.tex
+++ b/skript/vorwort.tex
@@ -1,5 +1,6 @@
 \chapter*{Vorwort}
 \lhead{Vorwort}
+\rhead{}
 Dieses Buch entstand im Rahmen des Mathematischen Seminars
 im Fr"uhjahrssemester 2014 an der Hochschule f"ur Technik Rapperswil.
 Die Teilnehmer, Studierende der Abteilungen f"ur Elektrotechnik und
