--- a/skript/montecarlo/MonteCarlo.tex
+++ b/skript/montecarlo/MonteCarlo.tex
@@ -1,5 +1,5 @@
 \chapter{Die Monte Carlo Methode}
-\rhead{Die Monte Carlo Methode}
+\lhead{Die Monte Carlo Methode}
 \begin{refsection}
 \chapterauthor{Dorian Amiet, Hannes Badertscher}
 \lstdefinestyle{C}{
@@ -18,6 +18,7 @@
 }
 
 \section{Einleitung}
+\rhead{Einleitung}
 Der Monte Carlo Algorithmus ist ein Verfahren zur L"osung numerischer
 Probleme durch das Ziehen von Zufallszahlen. Die Idee, mathematische
 bzw. physikalische Probleme mit einem stochastischen Sampling-Verfahren
@@ -60,6 +61,7 @@ Carlo Algorithmus umfassen u.a.
 \end{itemize}
 
 \section{Funktionsprinzip}
+\rhead{Funktionsprinzip}
 Die Monte Carlo Methode ist ein "Uberbegriff f"ur verschiedene Algorithmen
 zur numerischen Berechnung / Simulation mittels Zufallsereignissen. Ein
 weit verbreiteter und sehr flexibler Ansatz ist das sogenannte Hit-or-Miss
@@ -179,6 +181,7 @@ daraus eine Versicherungspr"amie berechnet werden.
 
 
 \section{Implementation}
+\rhead{Implementation}
 \subsection{Implementation in C}
 Die Implementation dieses Beispiels in C ist relativ kurz und
 "ubersichtlich: "Uber $N$ Iterationen wird jeweils ein Paar von
@@ -327,7 +330,7 @@ Mit diesem Verfahren l"asst sich die vorhandene Hardware gut ausnutzen,
 ohne Genauigkeit durch schlechte Zufallszahlen zu verlieren.
 
 \section{Zufallszahlengeneratoren} 
-
+\rhead{Zufallszahlengeneratoren}
 \begin{quote}
 ``Anyone who considers arithmetical methods of producing random digits
 is, of course, in a state of sin.'' - John von Neumann, 1951
