--- a/skript/skript.tex
+++ b/skript/skript.tex
@@ -174,6 +174,8 @@ Hochschule f"ur Technik, Rapperswil, 2014
 \renewcommand{\qedsymbol}{$\bigcirc$}
 }{\end{proof}}
 
+\lhead{Inhaltsverzeichnis}
+\rhead{}
 \tableofcontents
 \newtheorem{satz}{Satz}[chapter]
 \newtheorem{hilfssatz}{Hilfssatz}[chapter]
